--- a/quiz.html
+++ b/quiz.html
@@ -174,7 +174,7 @@
             { question: "Quel est le plus long fleuve du monde ?", answers: ["Amazonie"], difficulty: "difficile" },
             { question: "Qui a peint la Mona Lisa ?", answers: ["Da Vinci"], difficulty: "moyenne" },
             { question: "Quelle est la monnaie du Japon ?", answers: ["Yen"], difficulty: "facile" },
-            { question: "Quel est l'élément chimique dont le symbole est O ?", answers: ["Oxygène, oxygene"], difficulty: "moyenne" },
+            { question: "Quel est l'élément chimique dont le symbole est O ?", answers: ["Oxygène", "oxygene"], difficulty: "moyenne" },
             { question: "Qui est le héros de 'Harry Potter' ?", answers: ["Harry"], difficulty: "facile" }
         ];
 
