cahnge_path_image

--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Critiques d'animes</title>
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="image_oeuf/oeuf_jaune.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -209,7 +209,7 @@
     <div class="container">
         <div class="header">
             <a href="#" onclick="playAudioAndRedirect()">
-                <img src="logo.png" alt="Logo" class="logo">
+                <img src="image_oeuf/oeuf_jaune.png" alt="oeuf_jaune class="logo">
             </a>
             <h1> <strong> Critiques d'animes</strong></h1>
             <p>Sur ce site vous trouverez des avis sur plein d'animes ainsi que des informations sur ces animes, chaque animé obtient une note que vous pouvez consulter, ici
