--- a/accueil3.html
+++ b/accueil3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autres Projets</title>
-    <link rel="icon" type="image/png" href="200px-Yoshi_Egg_Red_Artwork_-_Yoshi_s_New_Island.png">
+    <link rel="icon" type="image/png" href="image_oeuf/oeuf_rouge.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="header">
             <a href="#">
-                <img src="200px-Yoshi_Egg_Red_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
+                <img src="image_oeuf/oeuf_rouge.png" alt="oeuf_rouge" class="logo">
             </a>
             <h1><strong>Autres Projets</strong></h1>
             <p>Bienvenue dans la section "Autres", où vous trouverez tous mes projets divers et variés. Explorez et découvrez ce que j'ai créé en dehors des autres rubriques !</p>
