--- a/accueil4.html
+++ b/accueil4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page de Jeux</title>
-    <link rel="icon" type="image/png" href="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png">
+    <link rel="icon" type="image/png" href="image_oeuf/oeuf_vert.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -109,7 +109,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="120px-Yoshi_Egg_Green_Artwork_-_Yoshi_s_New_Island.png" alt="Logo" class="logo">
+            <img src="image_oeuf/oeuf_vert.png" alt="oeuf_vert" class="logo">
             <h1>Dle games</h1>
         </div>
 
