--- a/index.html
+++ b/index.html
@@ -207,23 +207,23 @@
   </div>
 
   <a href="accueil.html" class="egg nw">
-    <img src="oeuf_jaune.png" alt="Œuf jaune" width="85%">
+    <img src="image_oeuf/oeuf_jaune.png" alt="oeuf_jaune" width="85%">
   </a>
 
   <a href="accueil2.html" class="egg ne">
-    <img src="oeuf_violet.png" alt="Œuf violet" width="85%">
+    <img src="image_oeuf/oeuf_violet.png" alt="oeuf_violet" width="85%">
   </a>
 
   <a href="accueil3.html" class="egg se">
-    <img src="oeuf_rouge.png" alt="Œuf rouge" width="85%">
+    <img src="image_oeuf/oeuf_rouge.png" alt="oeuf_rouge" width="85%">
   </a>
 
   <a href="accueil4.html" class="egg sw">
-    <img src="oeuf_vert.png" alt="Œuf vert" width="85%">
+    <img src="image_oeuf/oeuf_vert.png" alt="oeuf_vert" width="85%">
   </a>
 
   <a href="ee.html" class="egg nig">
-    <img src="oeuf_noir.png" alt="oeuf noir" width="85%">
+    <img src="image_oeuf/oeuf_noir.png" alt="oeuf_noir" width="85%">
   </a>
 </body>
 </html>
