--- a/accueil2.html
+++ b/accueil2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZ !</title>
-    <link rel="icon" type="image/png" href="Purple_yoshi_YID.png">
+    <link rel="icon" type="image/png" href="image_oeuf/oeuf_violet.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="Purple_yoshi_YID.png" alt="Logo" class="logo">
+            <img src="image_oeuf/oeuf_violet.png" alt="oeuf_violet" class="logo">
 
             <h1>Bienvenue aux quiz !</h1>
             <br>
