menage_de_printemps
renommage des dif accueils, tris de l'easter egg, et remise a niveau des path en conséquances

--- a/easter_egg/ee.html
+++ b/easter_egg/ee.html
@@ -45,11 +45,11 @@
     </div>
 
     <div class="yoshi">
-        <img src="fat_yoshi.png" alt="gros yoshi" width="500px">
+        <img src="image/fat_yoshi.png" alt="gros yoshi" width="500px">
     </div>
 
-    <audio id="background-music" src="07. Flower Garden.mp3" preload="auto" loop></audio>
-    <audio id="yoshi-sound" src="yoshi-tongue.mp3" preload="auto"></audio>
+    <audio id="background-music" src="soud/Flower Garden.mp3" preload="auto" loop></audio>
+    <audio id="yoshi-sound" src="soud/yoshi-tongue.mp3" preload="auto"></audio>
 
     <script>
         window.addEventListener('load', function() {
