test responsivité index
tesste responsif pour tel

correction bug image : logo violet : quiz

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu de Quiz</title>
-    <link rel="icon" type="image/png" href="Purple_yoshi_YID.png">
+    <link rel="icon" type="image/png" href="image_oeuf/oeuf_violet.png">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -125,7 +125,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="Purple_yoshi_YID.png" alt="Logo" class="logo">
+            <img src="image_oeuf/oeuf_violet.png" alt="oeuf_violet" class="logo">
             <h1>Quiz normal</h1>
             <div id="settings-container">
                 <h2>Choisissez vos paramètres</h2>
