--- a/index.html
+++ b/index.html
@@ -158,39 +158,104 @@
     .egg.nig { animation: rotate_noir 25s linear infinite; }
 
     @media (max-width: 1000px) {
-            html, body {
-      overflow: hidden;
-    }
-    .info-box ul li a{
-        font-size: 10px; 
-        padding: 10px;
-        margin: 0px;  
-    }
+    
+      .info-box ul li a{
+          font-size: 40%; 
+          padding: 3%;
+          margin: 0px;  
+      }
 
-    .info-box ul li {
-      padding: 0.5%;
-    }
+      .info-box ul li {
+        padding: 0.3%;
+      }
 
-    .info-box ul li a:hover{
-      padding: 2%;
-      box-shadow: 0 0 10px #fff;
-      font-size: 80%;
-    }
+      .info-box ul li a:hover{
+        padding: 2%;
+        box-shadow: 0 0 10px #fff;
+        font-size: 80%;
+      }
 
-    .info-box {
-        width: 300px; 
-        height: 300px;
-        padding: 10px;
-    }
+      .info-box {
+          width: 300px; 
+          height: 300px;
+          padding: 10px;
+      }
 
-    .info-box h2 {
-        font-size: 22px; 
-    }
+      .info-box h2 {
+          font-size: 80%; 
+      }
 
-    .info-box p {
-        font-size: 18px;
+      .info-box p {
+          font-size: 90%;
+      }
+      
+      @keyframes rotate_vert {
+        0% {transform: translate(-125px, -125px) rotate(30deg);}
+        12.5% {transform: translate(0px, -185px) rotate(-30deg);}
+        25% {transform: translate(125px, -125px) rotate(30deg);}
+        37.5% {transform: translate(185px, 0px) rotate(-30deg);}
+        50% {transform: translate(125px, 125px) rotate(30deg);}
+        62.5% {transform: translate(0px, 185px) rotate(-30deg);}
+        75% {transform: translate(-125px, 125px) rotate(30deg);}
+        87.5% {transform: translate(-185px, 0px) rotate(-30deg);}
+        100% {transform: translate(-125px, -125px) rotate(30deg);}
+      }
+
+      @keyframes rotate_violet {
+        0% {transform: translate(125px, -125px) rotate(-30deg);}
+        12.5% {transform: translate(185px, 0px) rotate(30deg);}
+        25% {transform: translate(125px, 125px) rotate(-30deg);}
+        37.5% {transform: translate(0px, 185px) rotate(30deg);}
+        50% {transform: translate(-125px, 125px) rotate(-30deg);}
+        62.5% {transform: translate(-185px, 0px) rotate(30deg);}
+        75% {transform: translate(-125px, -125px) rotate(-30deg);}
+        87.5% {transform: translate(0px, -185px) rotate(30deg);}
+        100% {transform: translate(125px, -125px) rotate(-30deg);}
+      }
+
+      @keyframes rotate_rouge {
+        0% {transform: translate(125px, 125px) rotate(30deg);}
+        12.5% {transform: translate(0px, 185px) rotate(-30deg);}
+        25% {transform: translate(-125px, 125px) rotate(30deg);}
+        37.5% {transform: translate(-185px, 0px) rotate(-30deg);}
+        50% {transform: translate(-125px, -125px) rotate(30deg);}
+        62.5% {transform: translate(0px, -185px) rotate(-30deg);}
+        75% {transform: translate(125px, -125px) rotate(30deg);}
+        87.5% {transform: translate(185px, 0px) rotate(-30deg);}
+        100% {transform: translate(125px, 125px) rotate(30deg);}
+      }
+
+      @keyframes rotate_jaune {
+        0% {transform: translate(-125px, 125px) rotate(-30deg);}
+        12.5% {transform: translate(-185px, 0px) rotate(30deg);}
+        25% {transform: translate(-125px, -125px) rotate(-30deg);}
+        37.5% {transform: translate(0px, -185px) rotate(30deg);}
+        50% {transform: translate(125px, -125px) rotate(-30deg);}
+        62.5% {transform: translate(185px, 0px) rotate(30deg);}
+        75% {transform: translate(125px, 125px) rotate(-30deg);}
+        87.5% {transform: translate(0px, 185px) rotate(30deg);}
+        100% {transform: translate(-125px, 125px) rotate(-30deg);}
+      }
+
+      @keyframes rotate_noir {
+        0% {transform: translate(0px, 0px);}
+        12.5% {transform: translate(0px, 200px);}
+        25% {transform: translate(0px, 0px);}
+        37.5% {transform: translate(200px, 0px);}
+        50% {transform: translate(0px, 0px);}
+        62.5% {transform: translate(0px, -200px);}
+        75% {transform: translate(0px, 0px);}
+        87.5% {transform: translate(-200px, 0px);}
+        100% {transform: translate(0px, 0px);}
+      }
+
+      .egg.sw { animation: rotate_vert 10s linear infinite; }
+      .egg.nw { animation: rotate_jaune 10s linear infinite; }
+      .egg.ne { animation: rotate_violet 10s linear infinite; }
+      .egg.se { animation: rotate_rouge 10s linear infinite; }
+      .egg.nig { animation: rotate_noir 25s linear infinite; }
+
     }
-        }
    
   </style>
 </head>
