--- a/monogataridle.html
+++ b/monogataridle.html
@@ -25,7 +25,8 @@
             background-color: #222;
             position: absolute;
             z-index: 1000;
-            width: calc(100% - 2px);
+            margin-left: 0.6%;
+            width: calc(96.2%);
             animation: slideDown 0.3s;
         }
 
