--- a/quiz.html
+++ b/quiz.html
@@ -387,7 +387,7 @@
         });
 
         document.getElementById("go-home").addEventListener("click", () => {
-            window.location.href = "accueil2.html";
+            window.location.href = "accueil_quiz.html";
             alert("Retour à l'accueil");
         });
 
