--- a/easter_egg/ee.html
+++ b/easter_egg/ee.html
@@ -36,6 +36,12 @@
         .yoshi img:hover {
             transform: scale(1.1); 
         }
+
+        @media (max-width: 1000px) {
+            .text{
+               display: none; 
+            }
+        }
     </style>
 </head>
 <body>
