--- a/anime_critiques/barakamon.html
+++ b/anime_critiques/barakamon.html
@@ -13,7 +13,7 @@
         <img src="images_Animes/BARAKAMON.jpg" alt="Image de l'anime">
         <div class="info-box">
             <div class="rating">
-                8.75/10
+                8.5/10
             </div>
             <p>Lien de l'anime : <a href="https://v5.voiranime.com/anime/barakamon/">Barakamon</a></p>
             <p>Genres : <span class="genre-info">Comédie, Slice of Life</span></p>
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Seishuu Handa, calligraphe de talent, est envoyé sur une île en pleine campagne pour avoir littéralement mis une gifle à un directeur d'exposition, non-content de ses œuvres. Alors qu'il traîne des pieds pour y aller, il finit par s'attacher petit à petit aux villageois : enfants, parents, grands-parents... tous ont une histoire à raconter et une expérience à apporter à Seishuu.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
