--- a/anime_critiques/blade-&-soul.html
+++ b/anime_critiques/blade-&-soul.html
@@ -31,7 +31,7 @@
             <p>
                 Alka est une assassin pour le Clan de l'Épée. Elle est en quête de trouver la femme Jin Valel, qui a tué son maître Hon sans éprouver le moindre sentiment—d'une manière semblable à celle qu'Alka a apprise pour tuer dans son travail d'assassin. Au cours de son voyage, Alka rencontre trois femmes étranges, chacune étant une grande guerrière à sa manière, et elle se débat avec le souhait de son maître défunt qu'elle abandonne la vie d'assassin.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
