--- a/anime_critiques/clannad.html
+++ b/anime_critiques/clannad.html
@@ -28,7 +28,7 @@
             <p>Tomoya Okasaki est en troisième année au lycée et est considéré comme délinquant. Tout semble immuable dans sa vie de lycéen jusqu'à ce qu'il rencontre Nagisa et, dès lors, la vie de Tomoya parut changer. Il commence à rêver d'un monde sombre dans lequel vit une jeune fille ayant la capacité de créer des objets uniquement à partir d'ordures, qui lui créa un corps fait à partir de ces ordures.
                 Tomoya entre ainsi dans ce monde vide et sombre et suit la fille, la seule autre existence "survivante" dans ce monde.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
