--- a/anime_critiques/deadman-wonderland.html
+++ b/anime_critiques/deadman-wonderland.html
@@ -32,7 +32,7 @@
                 Suite à cela, on finit par emmener Ganta à la prison privée Deadman Wonderland, une prison où les règles se révèlent peu ordinaires, ce qui en fait un endroit assez angoissant.
                 Là-bas, il fera l'étrange rencontre de Shiro, une jeune fille qui a l'air de le connaître depuis longtemps et qui le considère comme un ami. Il découvrira également que depuis la disparition de tous ses proches, il possède un pouvoir inhabituel...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
