--- a/anime_critiques/elfen-lied.html
+++ b/anime_critiques/elfen-lied.html
@@ -32,7 +32,7 @@
                 
                 Mais suite à l'évasion qui s'est produite au laboratoire, l'Unité d'Assaut Spécial (S.A.T.) a reçu le feu vert pour éliminer la fugitive, Lucy qui se révèle en réalité être la mystérieuse Nyu...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
