--- a/anime_critiques/eve-no-jijan.html
+++ b/anime_critiques/eve-no-jijan.html
@@ -30,7 +30,7 @@
             <p class="title">Synopsis</p>
             <p>Dans un futur pas si lointain, les androïdes sont devenus d'usage normal, si bien que les humains les traitent comme des objets de tous les jours. Néanmoins, certaines personnes sont attirées par ces androïdes à cause de leur apparence humaine (mis à part l'anneau flottant au-dessus de leurs têtes), et c'est devenu un problème de société. Un jour, Rikuo, qui prenait les robots pour choses acquises, découvre que son androïde domestique, Sammi, agit bizarrement et trouve une phrase enregistrée dans son journal d'activités. Avec son ami Masaki, il décide alors de suivre Sammi et tombe sur un café inhabituel, où la première règle est de ne pas faire de différence entre humains et androïdes</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
