--- a/anime_critiques/gakuen-basara.html
+++ b/anime_critiques/gakuen-basara.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>La saga Sengoku Basara revient… au lycée ! L’affrontement mythique entre Date Masamune et Sanada Yukimura pour le trône de Président du Conseil des élèves commence ! Attention cependant : Toyotomi Hideyoshi, l’actuel président du Conseil, veille au grain… Cette guerre scolaire va-t-elle rentrer dans l’Histoire ?</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
