--- a/anime_critiques/hal.html
+++ b/anime_critiques/hal.html
@@ -30,7 +30,7 @@
             <p class="title">Synopsis</p>
             <p>Hal est le petit ami de Kurumi. Cette dernière se laisse mourir lentement depuis le décès d'Hal dans un crash aérien. Q-01 est une robot humanoïde. Son créateur lui donnera l'apparence du défunt Hal dans l'espoir que Q-01 entre en contact avec Kurumi. Mais la jeune fille n'est absolument pas motivée à sortir de sa chambre face à un robot ayant l'apparence d'Hal...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
