--- a/anime_critiques/hanasaku-iroha.html
+++ b/anime_critiques/hanasaku-iroha.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p> Ohana Matsumae est une jeune fille de 16 ans vivant à Tokyo qui est à la recherche de son futur, du jour au lendemain sa mère lui annonce son départ avec son copain car il croule sous les dettes. Ohana se retrouve alors obligée d'aller chez sa grand-mère qu'elle ne connait pas du tout, en arrivant là-bas elle découvre que sa grand-mère est loin d'être gentille et l'obligera même à travailler dans sa source thermale, Kissui. Elle s'y fera alors des amis et verra sa vie prendre un tournant inattendu....</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
