--- a/anime_critiques/happy-sugar-life.html
+++ b/anime_critiques/happy-sugar-life.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Matsuzaka Satou a longuement eu la réputation d'enchaîner les petits amis jusqu'au jour où elle rencontre l'amour de sa vie, qui n'est autre que l'adorable petite Shio. Depuis, Matsuzaka fait tout pour le bien de leur relation, quitte à recourir à la violence. Mais d'où vient réellement Shio ?</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
