--- a/anime_critiques/hourou-musuko.html
+++ b/anime_critiques/hourou-musuko.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Hourou Musuko de Takako Shimura raconte les tentatives de Shuuichi et Yoshino de se découvrir eux-mêmes alors qu'ils entrent dans la puberté, se font des amis, tombent amoureux et font face à des choix très réels et difficiles.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
