--- a/anime_critiques/iroduku.html
+++ b/anime_critiques/iroduku.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Été 2078. Hitomi Tsukishiro, 17 ans, est incapable de percevoir les couleurs depuis de nombreuses années, ce qui l'a rendu apathique. Elle en est également venue à haïr la magie, qu'elle juge responsable de ses malheurs, alors que sa famille est renommée pour ses mages depuis plusieurs génération. Bien décidée à l'aider, Kohaku, sa grand-mère maternelle, profite d'une nuit de nouvelle lune pour l'envoyer 60 ans dans le passé. Elle espère ainsi qu'Hitomi retrouvera goût à la vie. Printemps 2018. Désorientée dans une ville qu'elle reconnaît péniblement, Hitomi tente de retrouver la boutique familiale lorsqu'elle rencontre un groupe d'adolescents fréquentant le même établissement scolaire que Kohaku. Ils lui viennent en aide et, lorsqu'elle rejoint l'établissement, lui propose de rejoindre leur club dont fait également parti un certain 'Yuito', qui passe le plus clair de son temps à dessiner. Des oeuvres qui sont les seuls éléments qu'Hitomi est capable de voir en couleurs !</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
