--- a/anime_critiques/jingai-san-no-yome.html
+++ b/anime_critiques/jingai-san-no-yome.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Le lycéen Tomari Hinowa est appelé un jour dans le bureau du directeur pour apprendre une nouvelle choquante : il va se marier ! Une mystérieuse créature duveteuse appelée Kanenogi l'a choisi comme épouse, et malgré les réticences initiales de Tomari, il décide d'accepter. Ce qui suit est une série d'histoires délicieuses sur la vie conjugale monstrueuse de ce nouveau couple.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
