--- a/anime_critiques/king's-game.html
+++ b/anime_critiques/king's-game.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>L'histoire se centre sur une classe entière de 32 lycéens qui reçoivent un étrange message venant d'une personne se faisant appeler le "roi". Le message contient des ordres que les lycéens doivent accomplir sous peine de mourir. Au fur et à mesure que les jours passent, les ordres du "roi" deviennent de plus en plus extrêmes...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
