--- a/anime_critiques/komori-san-wa-kotowarenai!.html
+++ b/anime_critiques/komori-san-wa-kotowarenai!.html
@@ -29,7 +29,7 @@
             <p>Shuri Komori est une ravissante jeune fille de 15 ans. Elle est si jolie que tout le monde la sollicite. Et comme elle ne sait pas refuser, elle fait tout ce qu'elle peut pour aider les autres. Komori vit ainsi une adolescence heureuse, remplie d'événements en tout genre.
             </p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
