--- a/anime_critiques/love-flops.html
+++ b/anime_critiques/love-flops.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Un matin, alors qu'il se prépare pour aller en cours, Asahi Kashiwagi entend les prévisions de son horoscope pour la journée mais n'y accorde que peu d'importance. Pourtant, sur le chemin de l'école, il est confronté à divers incidents qui semblent totalement correspondre aux prévisions. Chacun de ces incidents lui permettant de faire la rencontre de jeunes femmes qui, coïncidence, fréquentent toutes le même établissement scolaire que lui...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
