--- a/anime_critiques/mind-game.html
+++ b/anime_critiques/mind-game.html
@@ -32,7 +32,7 @@
 
                 Nishi, maintenant mort, se réveille et rencontre un dieu qui change constamment de forme, qui se moque de sa mort. Le dieu dit à Nishi d'entrer dans un portail et de disparaître de l'existence, ce que Nishi rejette, choisissant plutôt de sprinter devant le dieu et de se réanimer. Avec une nouvelle vision de la vie et une connaissance de la façon dont les Yakuza vont l'attaquer, Nishi tue l'un des Yakuza avec sa propre arme, s'enfuyant dans une voiture volée avec Myon et sa sœur.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
