--- a/anime_critiques/orange.html
+++ b/anime_critiques/orange.html
@@ -27,7 +27,7 @@
             <p class="title">Synopsis</p>
             <p>Un jour de printemps, Naho Takamiya, âgée de 16 ans, reçoit une étrange lettre signée de son propre nom, datant de dix ans dans le futur. Elle croit d'abord bien sûr à une plaisanterie. Cependant, en commençant à lire la lettre et les détails qui y sont écrits, elle se rend compte au fur et à mesure que des évènements relatés se sont réalisés tels que l'arrivée du nouvel étudiant, Kakeru Naruse, qui est assis à côté d'elle en classe. Dans la lettre, la Naho du futur parle de ses nombreux regrets, sous-entendant à la Naho du présent de prendre de meilleures décisions, en particulier concernant Kakeru. En effet, le jeune garçon n'est plus de ce monde dans le futur. La Naho du futur lui demande donc de veiller sur lui...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
