--- a/anime_critiques/paranoia-agent.html
+++ b/anime_critiques/paranoia-agent.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>Tsukiko Sagi est créatrice dans une grande entreprise et a connu le succès grâce à une de ses peluches, Maromi. En rentrant de son travail, elle est attaquée par un mystérieux personnage, armé d'une batte de base-ball et de rollers : Shônen Bat (littéralement : le gamin à la batte). Le coup est si violent qu'elle se renferme dans son mutisme et qu'elle commence à avoir de drôles d'hallucinations... Et tous ceux qui s'intéressent à l'affaire sont eux aussi victimes de cet étrange voyou.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.htmls">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
