--- a/anime_critiques/pupa.html
+++ b/anime_critiques/pupa.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>On suit Utsutsu et Yume Hasegawa, un garçon et sa petite sœur qui se retrouvent tout seul. Un jour, Yume voit un papillon rouge mystérieux et son corps subit une métamorphose en une créature étrange qui mange les humains. Utsutsu se démène alors pour trouver un moyen de faire revenir sa sœur à son état normal.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
