--- a/anime_critiques/qualidea-code.html
+++ b/anime_critiques/qualidea-code.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>La série animée mélange les personnages des 3 romans issus de l'univers Qualidea Code de Speakeasy (collectifs d'auteurs). Afin de sauver l'humanité un jour, des enfants sont plongés dans un sommeil artificiel. Ces derniers se réveillent 10 ans plus tard, dans un monde post-apocalyptique, avec de mystérieux pouvoirs. Cette faculté leur permettra de lutter contre Unknow, une entité énigmatique qui a envahie la terre. Nous suivrons les aventures d'Ichiya Suzaku, Canaria Utara, Hotaru Rindo, Maihime Tenkawa, Asuha Chigusa et Kazumi Chigusa; qui protégeront chacun en duo, les villes de Tokyo, Kanagawa et Chiba.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
