--- a/anime_critiques/serial-experiments-lain.html
+++ b/anime_critiques/serial-experiments-lain.html
@@ -28,7 +28,7 @@
             <p class="title">Synopsis</p>
             <p>C'est l'histoire de Lain une fille un peu étrange et à l'écart à l'école. Une élève de sa classe se suicide et toute la classe commence a recevoir des mails étrange de cette fille, alors qu'elle est morte. Lain décide d'enquêter sur le net après avoir reçut un mail de cette fille, disant avoir rencontré Dieu sur le net. Commence pour elle un voyage dans le monde des hackers et du réseau, à la recherche de l'existence de Dieu et d'elle-même.</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
