--- a/anime_critiques/terror-in-resonance.html
+++ b/anime_critiques/terror-in-resonance.html
@@ -29,7 +29,7 @@
             <p>Un jour d'été, une bombe explose soudainement au centre de Tokyo et les coupables de cet acte terroriste ne sont autres que deux jeunes adolescents se faisant appeler "Sphinx".
                 Mais cet événement n'est que le prélude d'un énorme jeu lancé par ce même duo, impliquant la population japonaise toute entière...</p>
         </div>
-        <p><a href="../accueil.html">Revenir à la page d'accueil</a></p>
+        <p><a href="../accueil_critique_anime.html">Revenir à la page d'accueil</a></p>
 
     </div>
 </body>
