--- a/anime_critiques/anohana.html
+++ b/anime_critiques/anohana.html
@@ -24,7 +24,7 @@
         </div>
         <div class="review-box">
             <p class="title">Critique de l'anime</p>
-            <p>J'ai adoré regardé cet anime, tous les personnages sont intéréssants et apportent quelque chose, et l'intrigue et l'histoire est très bien faite et assez émouvante.</p>
+            <p>J'ai adoré regarder cet anime, tous les personnages sont intéréssants et apportent quelque chose, et l'intrigue et l'histoire est très bien faite et assez émouvante.</p>
             <p class="title">Synopsis</p>
             <p>L'histoire nous entraîne aux côtés de Jin-tan, Anaru, Yukiatsu, Tsuruko, Poppo et Menma, 3 jeunes filles et 3 jeunes garçons inséparables vivant à la campagne. Malheureusement, après un accident mortel qui est arrivé à Menma, le groupe d'amis se sépare. Suite à ces événements, chacun a choisi un chemin différent : Anaru passe la plupart de son temps avec ses amies, Poppo rêve de voyage, Yukiatsu et Tsuruko sont dans le même lycée et restent toujours ensemble et Jin-tan est devenu un Hikikomori. Un jour, l'esprit de Menma revient chez Jintan en été sans aucune explication, et ne pourra partir que lorsque Jintan aura réalisé son vœux. Jintan est le seul capable de voir Menma. Pensant que c'est à cause de son traumatisme dû à la disparition de cette dernière, il se dit alors qu'elle n'est qu'une hallucination. Mais malgré cela, il va tout faire pour réaliser le souhait de la jeune fille disparue, et va ainsi reformer son ancien groupe d'amis. Au départ, ils pensent que Jintan est devenu fou. Mais ils réaliseront que leur désir de réaliser le vœu de leur amie défunte est bien réel, et que leur ami Jintan ne mentait pas en disant la voir et lui parler.</p>
         </div>
