--- a/anime_critiques/blade-&-soul.html
+++ b/anime_critiques/blade-&-soul.html
@@ -16,7 +16,7 @@
                 2.7/10
             </div>
             <p>Lien de l'anime : <a href="https://www.crunchyroll.com/fr/series/GRGG4VMER/blade-and-soul">Blade & Soul</a></p>
-            <p>Genres : <span class="genre-info">Action, Aventure, Fantasie</span></p>
+            <p>Genres : <span class="genre-info">Action, Aventure, Fantastique</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">13</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">2014</span></p>
             <p>Opening : <span class="opening-info">4/10</span> <br> Ending : <span class="ending-info">2/10</span></p>
