--- a/anime_critiques/iroduku.html
+++ b/anime_critiques/iroduku.html
@@ -16,7 +16,7 @@
                 7.8/10
             </div>
             <p>Lien de l'anime : <a href="https://anime-sama.fr/catalogue/iroduku-le-monde-en-couleur/">Iroduku</a></p>
-            <p>Genres : <span class="genre-info">Romance, Slice-of-Life, Surnaturel</span></p>
+            <p>Genres : <span class="genre-info">Romance, Slice of Life, Surnaturel</span></p>
             <p>Nombre d'épisodes : <span class="episode-info">13</span> <br> Nombre de saisons : <span class="episode-info">1</span></p>
             <p>Statut : <span class="status-info">Terminé</span> <br> Date de diffusion : <span class="date-info">2018</span></p>
             <p>Opening : <span class="opening-info">6.5/10</span> <br> Ending : <span class="ending-info">6/10</span></p>
