--- a/liste_animes.html
+++ b/liste_animes.html
@@ -343,7 +343,14 @@
         "image": "AKAME GA KILL.jpg",
         "rating": "6.3",
         "genre": "Action, Aventure, Drame"
+    },
+    {
+        "name": "Thermae Romae Novae",
+        "image": "THERMAE ROMAE NOVAE.jpg",
+        "rating": "4.25",
+        "genre": "Isekai, Historique, Surnaturel"
     }
+    
     
 
 
